# C-UNIX2018-project

./: .gitignore  LICENSE  README.md
image_socket/: CMakeLists.txt  design.md  main.cpp
qt-gui/: qt-gui.pro
report/: report.pptx
web_gui/: readme.md  recive.cpp
web_gui/build-qt-test-Desktop-Debug/: Makefile  moc_mainwindow.cpp  outcpp.avi  qt-test  ui_mainwindow.h
web_gui/old_version/: CMakeLists.txt  recive.cpp
web_gui/qt-test/: compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-test.pro
